updated the main file
Signed-off-by: swastik959 <Sswastik959@gmail.com>

--- a/other/check-vpa-configuration/check-vpa-configuration.yaml
+++ b/other/check-vpa-configuration/check-vpa-configuration.yaml
@@ -31,7 +31,7 @@ spec:
             - name: vpas
               apiCall:
                 urlPath: "/apis/autoscaling.k8s.io/v1/namespaces/{{request.object.metadata.namespace}}/verticalpodautoscalers"
-                jmesPath: "items[?spec.targetRef.kind=='{{ request.object.kind }}'].spec.targetRef.name"
+                jmesPath: "items[?spec.targetRef.kind=='{{ request.object.kind }}' && spec.targetRef.apiVersion == '{{ request.object.apiVersion }}'].spec.targetRef.name"
           validate:
             message: >-
               Workload '{{request.object.kind}}/{{request.object.metadata.name}}' 
