require-ro-rootfs: fix selector does not match template labels
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/best-practices-cel/require-ro-rootfs/.chainsaw-test/bad-podcontrollers.yaml
+++ b/best-practices-cel/require-ro-rootfs/.chainsaw-test/bad-podcontrollers.yaml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       labels:
-        foo: bar
+        app: app
     spec:
       containers:
       - name: busybox
