--- a/best-practices/require-ro-rootfs/.chainsaw-test/bad-pod-notall.yaml
+++ b/best-practices/require-ro-rootfs/.chainsaw-test/bad-pod-notall.yaml
@@ -6,7 +6,7 @@ spec:
   containers:
   - name: busybox
     image: busybox:1.35
-  - name: busybox
+  - name: busybox-again
     image: busybox:1.35
     securityContext:
       readOnlyRootFilesystem: true
@@ -21,5 +21,5 @@ spec:
     image: busybox:1.35
     securityContext:
       readOnlyRootFilesystem: true
-  - name: busybox
+  - name: busybox-again
     image: busybox:1.35
