disallow-helm-tiller: fix invalid container naming
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/best-practices-cel/disallow-helm-tiller/.chainsaw-test/bad-deploy.yaml
+++ b/best-practices-cel/disallow-helm-tiller/.chainsaw-test/bad-deploy.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - image: busybox
-        name: busybox:1.35
+        name: busybox
       - image: docker.io/tiller:latest
         name: helm-tiller
