--- a/best-practices/require-labels/.chainsaw-test/bad-podcontrollers.yaml
+++ b/best-practices/require-labels/.chainsaw-test/bad-podcontrollers.yaml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       labels:
-        foo: bar
+        app: app
     spec:
       containers:
       - name: busybox
