restrict-image-registries: fix selector does not match template labels
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/best-practices-cel/restrict-image-registries/.chainsaw-test/bad-podcontrollers.yaml
+++ b/best-practices-cel/restrict-image-registries/.chainsaw-test/bad-podcontrollers.yaml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       labels:
-        foo: bar
+        app: app
     spec:
       initContainers:
       - name: k8s-nginx-init
@@ -35,7 +35,7 @@ spec:
   template:
     metadata:
       labels:
-        foo: bar
+        app: app
     spec:
       initContainers:
       - name: k8s-nginx-init
@@ -60,7 +60,7 @@ spec:
   template:
     metadata:
       labels:
-        foo: bar
+        app: app
     spec:
       initContainers:
       - name: k8s-nginx-init
