rename file for clarity
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/best-practices/disallow-cri-sock-mount/.chainsaw-test/chainsaw-test.yaml
+++ b/best-practices/disallow-cri-sock-mount/.chainsaw-test/chainsaw-test.yaml
@@ -19,7 +19,7 @@ spec:
           spec:
             validationFailureAction: Enforce
     - assert:
-        file: chainsaw-step-01-assert-1.yaml
+        file: policy-assert.yaml
   - name: step-02
     try:
     - apply:
