--- a/best-practices-cel/disallow-cri-sock-mount/.kyverno-test/kyverno-test.yaml
+++ b/best-practices-cel/disallow-cri-sock-mount/.kyverno-test/kyverno-test.yaml
@@ -11,25 +11,11 @@ results:
   policy: disallow-container-sock-mounts
   resources:
   - pod-with-docker-sock-mount
-  - goodpod01
-  result: pass
-  rule: validate-containerd-sock-mount
-- kind: Pod
-  policy: disallow-container-sock-mounts
-  resources:
-  - pod-with-docker-sock-mount
-  - goodpod01
-  result: pass
-  rule: validate-crio-sock-mount
-- kind: Pod
-  policy: disallow-container-sock-mounts
-  resources:
-  - pod-with-docker-sock-mount
   result: fail
-  rule: validate-docker-sock-mount
+  rule: validate-socket-mounts
 - kind: Pod
   policy: disallow-container-sock-mounts
   resources:
   - goodpod01
   result: pass
-  rule: validate-docker-sock-mount
+  rule: validate-socket-mounts
