--- a/best-practices/require-drop-cap-net-raw/.chainsaw-test/bad-pod-initcontainers.yaml
+++ b/best-practices/require-drop-cap-net-raw/.chainsaw-test/bad-pod-initcontainers.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: add-capabilities-bad
+  name: add-capabilities-bad-1
 spec:
   initContainers:
   - name: init
@@ -25,7 +25,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: add-capabilities-bad
+  name: add-capabilities-bad-2
 spec:
   initContainers:
   - name: init
