--- a/best-practices-cel/require-pod-requests-limits/require-pod-requests-limits.yaml
+++ b/best-practices-cel/require-pod-requests-limits/require-pod-requests-limits.yaml
@@ -3,11 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: require-requests-limits
   annotations:
-    policies.kyverno.io/title: Require Limits and Requests
-    policies.kyverno.io/category: Best Practices, EKS Best Practices
+    policies.kyverno.io/title: Require Limits and Requests in CEL expressions
+    policies.kyverno.io/category: Best Practices, EKS Best Practices in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       As application workloads share cluster resources, it is important to limit resources
       requested and consumed by each Pod. It is recommended to require resource requests and
@@ -16,7 +17,7 @@ metadata:
       This policy validates that all containers have something specified for memory and CPU
       requests and memory limits.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-resources
@@ -26,13 +27,14 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "CPU and memory resource requests and limits are required."
-      pattern:
-        spec:
-          containers:
-          - resources:
-              requests:
-                memory: "?*"
-                cpu: "?*"
-              limits:
-                memory: "?*"
+      cel:
+        expressions:
+          - expression: >-
+              object.spec.containers.all(container,
+              has(container.resources) &&
+              has(container.resources.requests) &&
+              has(container.resources.requests.memory) &&
+              has(container.resources.requests.cpu) &&
+              has(container.resources.limits) &&
+              has(container.resources.limits.memory))
+            message: "CPU and memory resource requests and limits are required."
