rename files for clarity
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/best-practices-cel/disallow-cri-sock-mount/.chainsaw-test/chainsaw-test.yaml
+++ b/best-practices-cel/disallow-cri-sock-mount/.chainsaw-test/chainsaw-test.yaml
@@ -19,7 +19,7 @@ spec:
           spec:
             validationFailureAction: Enforce
     - assert:
-        file: policy-assert.yaml
+        file: policy-ready.yaml
   - name: step-02
     try:
     - apply:
