--- a/best-practices/disallow-default-namespace/.chainsaw-test/chainsaw-test.yaml
+++ b/best-practices/disallow-default-namespace/.chainsaw-test/chainsaw-test.yaml
@@ -19,11 +19,11 @@ spec:
           spec:
             validationFailureAction: Enforce
     - assert:
-        file: chainsaw-step-01-assert-1.yaml
+        file: policy-ready.yaml
   - name: step-02
     try:
     - apply:
-        file: chainsaw-step-02-apply-1.yaml
+        file: ns.yaml
   - name: step-03
     try:
     - apply:
