--- a/best-practices/require-drop-cap-net-raw/.chainsaw-test/chainsaw-test.yaml
+++ b/best-practices/require-drop-cap-net-raw/.chainsaw-test/chainsaw-test.yaml
@@ -19,7 +19,7 @@ spec:
           spec:
             validationFailureAction: Enforce
     - assert:
-        file: policy-assert.yaml
+        file: policy-ready.yaml
   - name: step-02
     try:
     - apply:
