--- a/pod-security-cel/baseline/disallow-host-ports-range/.kyverno-test/kyverno-test.yaml
+++ b/pod-security-cel/baseline/disallow-host-ports-range/.kyverno-test/kyverno-test.yaml
@@ -5,7 +5,7 @@ metadata:
 policies:
 - ../disallow-host-ports-range.yaml
 resources:
-- ../../../../pod-security/baseline/disallow-host-ports-range/.kyverno-test/resource.yaml
+- resource.yaml
 results:
 - kind: CronJob
   policy: disallow-host-ports-range
@@ -65,6 +65,7 @@ results:
   - goodcronjob08
   - goodcronjob09
   - goodcronjob10
+  - goodcronjob11
   result: pass
   rule: host-port-range
 - kind: Deployment
@@ -80,6 +81,7 @@ results:
   - gooddeployment08
   - gooddeployment09
   - gooddeployment10
+  - gooddeployment11
   result: pass
   rule: host-port-range
 - kind: Pod
@@ -95,5 +97,6 @@ results:
   - goodpod08
   - goodpod09
   - goodpod10
+  - goodpod11
   result: pass
   rule: host-port-range
