--- a/pod-security-cel/baseline/disallow-privileged-containers/.kyverno-test/kyverno-test.yaml
+++ b/pod-security-cel/baseline/disallow-privileged-containers/.kyverno-test/kyverno-test.yaml
@@ -5,7 +5,7 @@ metadata:
 policies:
 - ../disallow-privileged-containers.yaml
 resources:
-- ../../../../pod-security/baseline/disallow-privileged-containers/.kyverno-test/resource.yaml
+- resource.yaml
 results:
 - kind: CronJob
   policy: disallow-privileged-containers
