--- a/pod-security-cel/baseline/disallow-proc-mount/.kyverno-test/kyverno-test.yaml
+++ b/pod-security-cel/baseline/disallow-proc-mount/.kyverno-test/kyverno-test.yaml
@@ -5,7 +5,7 @@ metadata:
 policies:
 - ../disallow-proc-mount.yaml
 resources:
-- ../../../../pod-security/baseline/disallow-proc-mount/.kyverno-test/resource.yaml
+- resource.yaml
 results:
 - kind: CronJob
   policy: disallow-proc-mount
