--- a/pod-security-cel/baseline/restrict-seccomp/.kyverno-test/kyverno-test.yaml
+++ b/pod-security-cel/baseline/restrict-seccomp/.kyverno-test/kyverno-test.yaml
@@ -5,7 +5,7 @@ metadata:
 policies:
 - ../restrict-seccomp.yaml
 resources:
-- ../../../../pod-security/baseline/restrict-seccomp/.kyverno-test/resource.yaml
+- resource.yaml
 results:
 - kind: CronJob
   policy: restrict-seccomp
