--- a/pod-security-cel/baseline/restrict-sysctls/.kyverno-test/kyverno-test.yaml
+++ b/pod-security-cel/baseline/restrict-sysctls/.kyverno-test/kyverno-test.yaml
@@ -5,7 +5,7 @@ metadata:
 policies:
 - ../restrict-sysctls.yaml
 resources:
-- ../../../../pod-security/baseline/restrict-sysctls/.kyverno-test/resource.yaml
+- resource.yaml
 results:
 - kind: CronJob
   policy: restrict-sysctls
