move restricted profile policies to cel
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/pod-security-cel/restricted/restrict-volume-types/.kyverno-test/kyverno-test.yaml
+++ b/pod-security-cel/restricted/restrict-volume-types/.kyverno-test/kyverno-test.yaml
@@ -5,7 +5,7 @@ metadata:
 policies:
 - ../restrict-volume-types.yaml
 resources:
-- ../../../../pod-security/restricted/restrict-volume-types/.kyverno-test/resource.yaml
+- resource.yaml
 results:
 - kind: CronJob
   policy: restrict-volume-types
