--- a/pod-security-cel/restricted/disallow-capabilities-strict/.chainsaw-test/chainsaw-test.yaml
+++ b/pod-security-cel/restricted/disallow-capabilities-strict/.chainsaw-test/chainsaw-test.yaml
@@ -19,20 +19,20 @@ spec:
           spec:
             validationFailureAction: Enforce
     - assert:
-        file: ../../../../pod-security/restricted/disallow-capabilities-strict/.chainsaw-test/chainsaw-step-01-assert-1.yaml
+        file: chainsaw-step-01-assert-1.yaml
   - name: step-02
     try:
     - apply:
-        file: ../../../../pod-security/restricted/disallow-capabilities-strict/.chainsaw-test/pod-good.yaml
+        file: pod-good.yaml
     - apply:
         expect:
         - check:
             ($error != null): true
-        file: ../../../../pod-security/restricted/disallow-capabilities-strict/.chainsaw-test/pod-bad.yaml
+        file: pod-bad.yaml
     - apply:
-        file: ../../../../pod-security/restricted/disallow-capabilities-strict/.chainsaw-test/podcontroller-good.yaml
+        file: podcontroller-good.yaml
     - apply:
         expect:
         - check:
             ($error != null): true
-        file: ../../../../pod-security/restricted/disallow-capabilities-strict/.chainsaw-test/podcontroller-bad.yaml
+        file: podcontroller-bad.yaml
