--- a/pod-security-cel/restricted/disallow-capabilities-strict/.kyverno-test/kyverno-test.yaml
+++ b/pod-security-cel/restricted/disallow-capabilities-strict/.kyverno-test/kyverno-test.yaml
@@ -5,7 +5,7 @@ metadata:
 policies:
 - ../disallow-capabilities-strict.yaml
 resources:
-- ../../../../pod-security/restricted/disallow-capabilities-strict/.kyverno-test/resource.yaml
+- resource.yaml
 results:
 - kind: CronJob
   policy: disallow-capabilities-strict
