--- a/pod-security-cel/restricted/disallow-privilege-escalation/.kyverno-test/kyverno-test.yaml
+++ b/pod-security-cel/restricted/disallow-privilege-escalation/.kyverno-test/kyverno-test.yaml
@@ -5,7 +5,7 @@ metadata:
 policies:
 - ../disallow-privilege-escalation.yaml
 resources:
-- ../../../../pod-security/restricted/disallow-privilege-escalation/.kyverno-test/resource.yaml
+- resource.yaml
 results:
 - kind: CronJob
   policy: disallow-privilege-escalation
