--- a/pod-security-cel/restricted/restrict-seccomp-strict/.kyverno-test/kyverno-test.yaml
+++ b/pod-security-cel/restricted/restrict-seccomp-strict/.kyverno-test/kyverno-test.yaml
@@ -5,7 +5,7 @@ metadata:
 policies:
 - ../restrict-seccomp-strict.yaml
 resources:
-- ../../../../pod-security/restricted/restrict-seccomp-strict/.kyverno-test/resource.yaml
+- resource.yaml
 results:
 - kind: CronJob
   policy: restrict-seccomp-strict
