--- a/pod-security-cel/restricted/restrict-volume-types/.chainsaw-test/chainsaw-test.yaml
+++ b/pod-security-cel/restricted/restrict-volume-types/.chainsaw-test/chainsaw-test.yaml
@@ -9,7 +9,7 @@ spec:
   - name: step-01
     try:
     - apply:
-        file: ../../../../pod-security/restricted/restrict-volume-types/.chainsaw-test/ns.yaml
+        file: ns.yaml
     - apply:
         file: ../restrict-volume-types.yaml
     - patch:
@@ -21,24 +21,25 @@ spec:
           spec:
             validationFailureAction: Enforce
     - assert:
-        file: ../../../../pod-security/restricted/restrict-volume-types/.chainsaw-test/chainsaw-step-01-assert-1.yaml
+        file: chainsaw-step-01-assert-1.yaml
   - name: step-02
     try:
     - apply:
-        file: ../../../../pod-security/restricted/restrict-volume-types/.chainsaw-test/pod-good.yaml
+        file: pod-good.yaml
     - apply:
         expect:
         - check:
             ($error != null): true
-        file: ../../../../pod-security/restricted/restrict-volume-types/.chainsaw-test/pod-bad.yaml
+        file: pod-bad.yaml
     - apply:
-        file: ../../../../pod-security/restricted/restrict-volume-types/.chainsaw-test/podcontroller-good.yaml
+        file: podcontroller-good.yaml
     - apply:
         expect:
         - check:
             ($error != null): true
-        file: ../../../../pod-security/restricted/restrict-volume-types/.chainsaw-test/podcontroller-bad.yaml
+        file: podcontroller-bad.yaml
   - name: step-99
     try:
     - script:
         content: kubectl delete all --all --force --grace-period=0 -n restrict-voltypes-ns
+
