--- a/other/check-vpa-configuration/.chainsaw-test/chainsaw-test.yaml
+++ b/other/check-vpa-configuration/.chainsaw-test/chainsaw-test.yaml
@@ -13,9 +13,9 @@ spec:
           apiVersion: kyverno.io/v1
           kind: ClusterPolicy
           metadata:
-            name: check-matching-vpa
+            name: check-vpa-configuration
           spec:
-            validationFailureAction: Enforce
+            validationFailureAction: Audit
     - assert:
         file: chainsaw-step-01-assert-1.yaml
   - name: 02 - Create VPAs
