--- a/other/check-vpa-configuration/.chainsaw-test/good.yaml
+++ b/other/check-vpa-configuration/.chainsaw-test/good.yaml
@@ -28,15 +28,15 @@ metadata:
 spec:
   selector:
     matchLabels:
-      name: good-daemonset
+      name: daemonset
   template:
     metadata:
       labels:
-        name: good-daemonset
+        name: daemonset
     spec:
       containers:
       - image: busybox:latest
-        name: good-busybox
+        name: busybox
         command:
         - "sleep"
         - "3000"
@@ -48,18 +48,18 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: good-busybox
+      app: busybox
   serviceName: busyservice
   replicas: 1
   minReadySeconds: 10
   template:
     metadata:
       labels:
-        app: good-busybox
+        app: busybox
     spec:
       containers:
       - image: busybox:latest
-        name: good-busybox
+        name: busybox
         command:
         - "sleep"
         - "3000" 
