added vpa as a subject
Signed-off-by: swastik959 <Sswastik959@gmail.com>

--- a/other/check-vpa-configuration/.chainsaw-test/chainsaw-test.yaml
+++ b/other/check-vpa-configuration/.chainsaw-test/chainsaw-test.yaml
@@ -15,7 +15,7 @@ spec:
           metadata:
             name: check-vpa-configuration
           spec:
-            validationFailureAction: Audit
+            validationFailureAction: Enforce
     - assert:
         file: chainsaw-step-01-assert-1.yaml
   - name: 02 - Create VPAs
