--- a/other-cel/allowed-annotations/allowed-annotations.yaml
+++ b/other-cel/allowed-annotations/allowed-annotations.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: allowed-annotations
   annotations:
-    policies.kyverno.io/title: Allowed Annotations
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/title: Allowed Annotations in CEL expressions
+    policies.kyverno.io/category: Other in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.6.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod, Annotation
     policies.kyverno.io/description: >-
       Rather than creating a deny list of annotations, it may be more useful
@@ -16,7 +16,7 @@ metadata:
       This policy demonstrates how to allow two annotations with a specific key
       name of fluxcd.io/ while denying others that do not meet the pattern.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: allowed-fluxcd-annotations
@@ -26,12 +26,10 @@ spec:
           kinds:
             - Pod
     validate:
-      message: The only approved FluxCD annotations are `fluxcd.io/cow` and `fluxcd.io/dog`.
-      deny:
-        conditions:
-          all:
-          - key: "{{ request.object.metadata.annotations.keys(@)[?contains(@, 'fluxcd.io/')] }}"
-            operator: AnyNotIn
-            value:
-            - fluxcd.io/cow
-            - fluxcd.io/dog
+      cel:
+        expressions:
+          - expression: >-
+              !has(object.metadata.annotations) ||
+              object.metadata.annotations.all(annotation, !annotation.contains('fluxcd.io/') || annotation in ['fluxcd.io/cow', 'fluxcd.io/dog'])
+            message: The only approved FluxCD annotations are `fluxcd.io/cow` and `fluxcd.io/dog`.
+      
