convert allowed-pod-priorities to cel
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/allowed-pod-priorities/allowed-pod-priorities.yaml
+++ b/other-cel/allowed-pod-priorities/allowed-pod-priorities.yaml
@@ -3,9 +3,10 @@ kind: ClusterPolicy
 metadata:
   name: allowed-podpriorities
   annotations:
-    policies.kyverno.io/title: Allowed Pod Priorities
-    policies.kyverno.io/category: Sample
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/title: Allowed Pod Priorities in CEL expressions
+    policies.kyverno.io/category: Sample in CEL 
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       A Pod PriorityClass is used to provide a guarantee on the scheduling of a Pod relative to others.
@@ -15,15 +16,10 @@ metadata:
       PriorityClasses for the given Namespace stored in a ConfigMap. If the `priorityClassName` is not
       among them, the Pod is blocked.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-pod-priority
-    context:
-      - name: podprioritydict
-        configMap:
-          name: allowed-pod-priorities
-          namespace: default
     match:
       any:
       - resources:
@@ -33,54 +29,77 @@ spec:
           - StatefulSet
           - Job
     validate:
-      message: >-
-        The Pod PriorityClass {{ request.object.spec.template.spec.priorityClassName }} is not in the list
-        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data."{{request.namespace}}" }}.
-      deny:
-        conditions:
-          any:
-          - key: "{{ request.object.spec.template.spec.priorityClassName }}"
-            operator: AnyNotIn
-            value:  '{{ podprioritydict.data."{{request.namespace}}" || "" }}'
-  - name: validate-pod-priority-pods
-    context:
-      - name: podprioritydict
-        configMap:
+      cel:
+        paramKind:
+          apiVersion: v1
+          kind: ConfigMap
+        paramRef:
           name: allowed-pod-priorities
           namespace: default
+          parameterNotFoundAction: Deny
+        variables:
+          - name: namespaceName
+            expression: "namespaceObject.metadata.name"
+          - name: priorities
+            expression: "variables.namespaceName in params.data ? params.data[variables.namespaceName].split(', ') : []"
+        expressions:
+          - expression: "variables.priorities == [] || object.spec.template.spec.priorityClassName in variables.priorities"
+            messageExpression: >-
+              'The Pod PriorityClass ' + object.spec.template.spec.priorityClassName + 
+              ' is not in the list of the following PriorityClasses allowed in this Namespace: ' + 
+              params.data[variables.namespaceName]"
+
+  - name: validate-pod-priority-pods
     match:
       any:
       - resources:
           kinds:
           - Pod
     validate:
-      message: >-
-        The Pod PriorityClass {{ request.object.spec.priorityClassName }} is not in the list
-        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data."{{request.namespace}}" }}.
-      deny:
-        conditions:
-          any:
-          - key: "{{ request.object.spec.priorityClassName || '' }}"
-            operator: AnyNotIn
-            value:  '{{ podprioritydict.data."{{request.namespace}}" || "" }}'
-  - name: validate-pod-priority-cronjob
-    context:
-      - name: podprioritydict
-        configMap:
+      cel:
+        paramKind:
+          apiVersion: v1
+          kind: ConfigMap
+        paramRef:
           name: allowed-pod-priorities
           namespace: default
+          parameterNotFoundAction: Deny
+        variables:
+          - name: namespaceName
+            expression: "namespaceObject.metadata.name"
+          - name: priorities
+            expression: "variables.namespaceName in params.data ? params.data[variables.namespaceName].split(', ') : []"
+        expressions:
+          - expression: "variables.priorities == [] || object.spec.priorityClassName in variables.priorities"
+            messageExpression: >-
+              'The Pod PriorityClass ' + object.spec.priorityClassName +
+              ' is not in the list of the following PriorityClasses allowed in this Namespace: ' +
+              params.data[variables.namespaceName]
+
+  - name: validate-pod-priority-cronjob
     match:
       any:
       - resources:
           kinds:
           - CronJob
     validate:
-      message: >-
-        The Pod PriorityClass {{ request.object.spec.jobTemplate.spec.template.spec.priorityClassName }} is not in the list
-        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data."{{request.namespace}}" }}.
-      deny:
-        conditions:
-          any:
-          - key: "{{ request.object.spec.jobTemplate.spec.template.spec.priorityClassName }}"
-            operator: AnyNotIn
-            value:  '{{ podprioritydict.data."{{request.namespace}}" || "" }}'
+      cel:
+        paramKind:
+          apiVersion: v1
+          kind: ConfigMap
+        paramRef:
+          name: allowed-pod-priorities
+          namespace: default
+          parameterNotFoundAction: Deny
+        variables:
+          - name: namespaceName
+            expression: "namespaceObject.metadata.name"
+          - name: priorities
+            expression: "variables.namespaceName in params.data ? params.data[variables.namespaceName].split(', ') : []"
+        expressions:
+          - expression: "variables.priorities == [] || object.spec.jobTemplate.spec.template.spec.priorityClassName in variables.priorities"
+            messageExpression: >-
+              'The Pod PriorityClass ' + object.spec.jobTemplate.spec.template.spec.priorityClassName +
+              ' is not in the list of the following PriorityClasses allowed in this Namespace: ' +
+              params.data[variables.namespaceName]
+      
