--- a/other-cel/allowed-pod-priorities/.chainsaw-test/cm.yaml
+++ b/other-cel/allowed-pod-priorities/.chainsaw-test/cm.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  pod-priority-ns: "[\"high\",\"medium\",\"low\"]"
+  pod-priority-ns: "high, medium, low"
   no-priority-ns: foo
 kind: ConfigMap
 metadata:
