add CI test for directories starting with b in other-cel folder
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,6 +54,7 @@ jobs:
           - ^other$/^res
           - ^other$/^[s-z]
           - ^other-cel$/^a
+          - ^other-cel$/^b
           - ^pod-security$
           - ^pod-security-cel$
           - ^psa$
