--- a/other-cel/check-env-vars/check-env-vars.yaml
+++ b/other-cel/check-env-vars/check-env-vars.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: check-env-vars
   annotations:
+    policies.kyverno.io/title: Check Environment Variables in CEL expressions
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/title: Check Environment Variables
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/category: Other in CEL 
     policies.kyverno.io/subject: Pod
-    kyverno.io/kubernetes-version: "1.24"
-    kyverno.io/kyverno-version: 1.8.2
+    kyverno.io/kubernetes-version: "1.26-1.27"
+    kyverno.io/kyverno-version: 1.11.0
     policies.kyverno.io/description: >-
       Environment variables control many aspects of a container's execution and are
       often the source of many different configuration settings. Being able to ensure that
@@ -17,7 +17,7 @@ metadata:
       `DISABLE_OPA` environment variable is defined, it must not be set to a value of `"true"`.
 spec:
   background: true
-  validationFailureAction: audit
+  validationFailureAction: Audit
   rules:
     - name: check-disable-opa
       match:
@@ -26,11 +26,9 @@ spec:
               kinds:
                 - Pod
       validate:
-        message: "DISABLE_OPA must not be set to true."
-        pattern:
-          spec:
-            containers:
-              - name: "*"
-                =(env):
-                  - (name): DISABLE_OPA
-                    value: "!true"
+        cel:
+          expressions:
+            - expression: >-  
+                !object.spec.containers.exists(container, has(container.env) &&
+                container.env.exists(e, e.name == 'DISABLE_OPA' && e.value == 'true'))
+              message: "DISABLE_OPA must not be set to true."
