convert check-serviceaccount-secrets to cel
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/check-serviceaccount-secrets/check-serviceaccount-secrets.yaml
+++ b/other-cel/check-serviceaccount-secrets/check-serviceaccount-secrets.yaml
@@ -3,11 +3,11 @@ kind: ClusterPolicy
 metadata:
   name: check-serviceaccount-secrets
   annotations:
-    policies.kyverno.io/title: Check Long-Lived Secrets in ServiceAccounts
-    policies.kyverno.io/category: Security
+    policies.kyverno.io/title: Check Long-Lived Secrets in ServiceAccounts in CEL expressions
+    policies.kyverno.io/category: Security in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.11.1
-    kyverno.io/kubernetes-version: "1.27"
+    kyverno.io/kyverno-version: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Secret,ServiceAccount
     policies.kyverno.io/description: >-
       Before version 1.24, Kubernetes automatically generated Secret-based tokens 
@@ -27,6 +27,7 @@ spec:
             kinds:
               - ServiceAccount
       validate:
-        message: "Long-lived API tokens are not allowed."
-        pattern:
-          X(secrets):
+        cel:
+          expressions:
+            - expression: "!has(object.secrets)"
+              message: "Long-lived API tokens are not allowed."
