--- a/other-cel/deny-secret-service-account-token-type/deny-secret-service-account-token-type.yaml
+++ b/other-cel/deny-secret-service-account-token-type/deny-secret-service-account-token-type.yaml
@@ -3,10 +3,10 @@ kind: ClusterPolicy
 metadata:
   name: deny-secret-service-account-token-type
   annotations:
-    policies.kyverno.io/title: Deny Secret Service Account Token Type
-    policies.kyverno.io/category: Security
-    kyverno.io/kubernetes-version: "1.27"
-    kyverno.io/kyverno-version: 1.11.1
+    policies.kyverno.io/title: Deny Secret Service Account Token Type in CEL expressions
+    policies.kyverno.io/category: Security in CEL 
+    kyverno.io/kubernetes-version: "1.26-1.27"
+    kyverno.io/kyverno-version: 1.11.0
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Secret
     policies.kyverno.io/description: >-
@@ -26,6 +26,8 @@ spec:
           kinds:
           - Secret
     validate:
-      message: "Secret ServiceAccount token type is not allowed."
-      pattern:
-        type: "!kubernetes.io/service-account-token"
+      cel:
+        expressions:
+          - expression: "object.type != 'kubernetes.io/service-account-token'"
+            message: "Secret ServiceAccount token type is not allowed."
+            
