convert disallow-all-secrets to cel
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/disallow-all-secrets/.kyverno-test/kyverno-test.yaml
+++ b/other-cel/disallow-all-secrets/.kyverno-test/kyverno-test.yaml
@@ -11,38 +11,13 @@ results:
   policy: no-secrets
   resources:
   - default/secret-env-pod
-  result: fail
-  rule: secrets-not-from-env
-- kind: Pod
-  policy: no-secrets
-  resources:
   - default/secret-ref-pod
   - default/secret-vol-pod
-  result: pass
-  rule: secrets-not-from-env
-- kind: Pod
-  policy: no-secrets
-  resources:
-  - default/secret-ref-pod
   result: fail
-  rule: secrets-not-from-envfrom
+  rule: secrets-not-from-env-envFrom-and-volumes
 - kind: Pod
   policy: no-secrets
   resources:
-  - default/secret-env-pod
-  - default/secret-vol-pod
+  - default/good-pod
   result: pass
-  rule: secrets-not-from-envfrom
-- kind: Pod
-  policy: no-secrets
-  resources:
-  - default/secret-vol-pod
-  result: fail
-  rule: secrets-not-from-volumes
-- kind: Pod
-  policy: no-secrets
-  resources:
-  - default/secret-env-pod
-  - default/secret-ref-pod
-  result: pass
-  rule: secrets-not-from-volumes
+  rule: secrets-not-from-env-envFrom-and-volumes
