convert disallow-localhost-services to cel
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/disallow-localhost-services/.kyverno-test/kyverno-test.yaml
+++ b/other-cel/disallow-localhost-services/.kyverno-test/kyverno-test.yaml
@@ -17,5 +17,5 @@ results:
   policy: no-localhost-service
   resources:
   - my-np-service
-  result: skip
+  result: pass
   rule: no-localhost-service
