--- a/other-cel/disallow-localhost-services/disallow-localhost-services.yaml
+++ b/other-cel/disallow-localhost-services/disallow-localhost-services.yaml
@@ -3,17 +3,18 @@ kind: ClusterPolicy
 metadata:
   name: no-localhost-service
   annotations:
-    policies.kyverno.io/title: Disallow Localhost ExternalName Services
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/title: Disallow Localhost ExternalName Services in CEL expressions
+    policies.kyverno.io/category: Sample in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Service
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       A Service of type ExternalName which points back to localhost can potentially be used to exploit
       vulnerabilities in some Ingress controllers. This policy audits Services of type ExternalName
       if the externalName field refers to localhost.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: no-localhost-service
@@ -23,8 +24,8 @@ spec:
           kinds:
           - Service
     validate:
-      message: "Service of type ExternalName cannot point to localhost."
-      pattern:
-        spec:
-          (type): ExternalName
-          externalName: "!localhost"
+      cel:
+        expressions:
+          - expression: "object.spec.type != 'ExternalName' || object.spec.externalName != 'localhost'"
+            message: "Service of type ExternalName cannot point to localhost."
+            
