convert disallow-secrets-from-env-vars to cel
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/disallow-secrets-from-env-vars/.chainsaw-test/podcontrollers-bad.yaml
+++ b/other-cel/disallow-secrets-from-env-vars/.chainsaw-test/podcontrollers-bad.yaml
@@ -100,4 +100,4 @@ spec:
                   name: foo
             - image: busybox:1.35
               name: busybox02
-          restartPolicy: OnFailures
+          restartPolicy: OnFailure
