--- a/other-cel/docker-socket-requires-label/.kyverno-test/kyverno-test.yaml
+++ b/other-cel/docker-socket-requires-label/.kyverno-test/kyverno-test.yaml
@@ -13,17 +13,13 @@ results:
   - nginx-bad-1
   - nginx-bad-2
   result: fail
-  rule: conditional-anchor-dockersock
-- kind: Pod
-  policy: docker-socket-check
-  resources:
-  - nginx-allow-2
-  result: pass
-  rule: conditional-anchor-dockersock
+  rule: docker-socket-check
 - kind: Pod
   policy: docker-socket-check
   resources:
   - nginx-allow-1
+  - nginx-allow-2
   - nginx-allow-3
-  result: skip
-  rule: conditional-anchor-dockersock
+  result: pass
+  rule: docker-socket-check
+
