--- a/other-cel/check-serviceaccount-secrets/.chainsaw-test/chainsaw-test.yaml
+++ b/other-cel/check-serviceaccount-secrets/.chainsaw-test/chainsaw-test.yaml
@@ -10,7 +10,7 @@ spec:
         content: |
           sed 's/validationFailureAction: Audit/validationFailureAction: Enforce/' ../check-serviceaccount-secrets.yaml | kubectl create -f -
     - assert:
-        file: chainsaw-step-01-assert-1.yaml
+        file: policy-ready.yaml
   - name: step-02
     try:
     - apply:
