--- a/cert-manager/limit-dnsnames/.chainsaw-test/chainsaw-test.yaml
+++ b/cert-manager/limit-dnsnames/.chainsaw-test/chainsaw-test.yaml
@@ -9,9 +9,19 @@ spec:
   - name: step-01
     try:
     - apply:
-        file: limit-dnsnames.yaml
+        file: ../limit-dnsnames.yaml
+    - patch:
+        resource:
+          apiVersion: kyverno.io/v1
+          kind: ClusterPolicy
+          metadata:
+            name: cert-manager-limit-dnsnames
+          spec:
+            validationFailureAction: Enforce
     - assert:
         file: chainsaw-step-01-assert-1.yaml
+    - assert:
+        file: chainsaw-step-01-assert-2.yaml
   - name: step-02
     try:
     - apply:
